Functional first version, applied Spring Security